[gd_scene load_steps=19 format=3 uid="uid://3jgngkwbegwv"]

[ext_resource type="Script" path="res://ui/game_over_ui.gd" id="1_4p15e"]
[ext_resource type="Texture2D" uid="uid://534e07crosql" path="res://addons/Tiny Swords/UI/Ribbons/Ribbon_Red_3Slides.png" id="1_noo0t"]
[ext_resource type="Texture2D" uid="uid://eo47sdmwhjd1" path="res://addons/Tiny Swords/UI/Banners/Banner_Horizontal.png" id="2_t0dgu"]
[ext_resource type="Texture2D" uid="uid://pxacx750e0pj" path="res://addons/Tiny Swords/Resources/Resources/G_Idle_(NoShadow).png" id="3_6dtae"]
[ext_resource type="Texture2D" uid="uid://bp88km46wujx2" path="res://addons/Tiny Swords/Resources/Resources/M_Idle_(NoShadow).png" id="4_hcia6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7d36w"]
texture = ExtResource("1_noo0t")
texture_margin_left = 64.0
texture_margin_right = 64.0
axis_stretch_horizontal = 2

[sub_resource type="SystemFont" id="SystemFont_frlup"]
font_names = PackedStringArray("Forte")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_743kh"]
texture = ExtResource("2_t0dgu")
texture_margin_left = 32.0
texture_margin_top = 24.0
texture_margin_right = 32.0
texture_margin_bottom = 48.0
axis_stretch_horizontal = 2
region_rect = Rect2(32, 40, 128, 136)

[sub_resource type="SystemFont" id="SystemFont_1sbsr"]
font_names = PackedStringArray("Forte")

[sub_resource type="SystemFont" id="SystemFont_n8hft"]
font_names = PackedStringArray("Forte")

[sub_resource type="LabelSettings" id="LabelSettings_5voe0"]
font = SubResource("SystemFont_n8hft")
font_size = 32
font_color = Color(0.0313726, 0.0313726, 0.12549, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_aa3vd"]
atlas = ExtResource("3_6dtae")
region = Rect2(40, 50, 56, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eoedm"]
atlas = ExtResource("4_hcia6")
region = Rect2(40, 56, 56, 40)

[sub_resource type="SystemFont" id="SystemFont_rnsqx"]
font_names = PackedStringArray("Forte")

[sub_resource type="Animation" id="Animation_6hcwp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Backgrownd:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.796078)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(315, 192.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Panel:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(522, 109)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Label:theme_override_font_sizes/font_size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [32]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Label:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Panel:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(315, 109)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Backgrownd:size")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1808, 1288)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Backgrownd:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-328, -320)]
}

[sub_resource type="Animation" id="Animation_w2h4e"]
resource_name = "default"
length = 5.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Backgrownd:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 2.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0), Color(0, 0, 0, 0.796078)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel2:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3.7, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(315, 880), Vector2(315, 880), Vector2(315, 200)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3.2, 3.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1), Vector2(0, 1), Vector2(1, 1)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(5.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"press_any"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Label:theme_override_font_sizes/font_size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(3.9, 4.3, 4.7, 5.1, 5.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [32, 24, 32, 24, 32]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Label:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(3.9, 5.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Panel:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(315, 109)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Backgrownd:size")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1808, 1288)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Backgrownd:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-328, -320)]
}

[sub_resource type="Animation" id="Animation_ftjai"]
resource_name = "press_any"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Backgrownd:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.796078)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(315, 200)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(522, 109)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label:theme_override_font_sizes/font_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [32, 24, 32, 24, 32]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Panel:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(315, 109)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Backgrownd:size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1808, 1288)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Backgrownd:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-328, -320)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pbifq"]
_data = {
"RESET": SubResource("Animation_6hcwp"),
"default": SubResource("Animation_w2h4e"),
"press_any": SubResource("Animation_ftjai")
}

[node name="GameOverUI" type="CanvasLayer"]
script = ExtResource("1_4p15e")

[node name="Backgrownd" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -328.0
offset_top = -320.0
offset_right = 1480.0
offset_bottom = 968.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.796078)

[node name="Panel" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 315.0
offset_top = 109.0
offset_right = 837.0
offset_bottom = 218.0
grow_horizontal = 2
pivot_offset = Vector2(261, 54.5)
theme_override_styles/panel = SubResource("StyleBoxTexture_7d36w")

[node name="GameOver" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -215.5
offset_right = 215.5
offset_bottom = 71.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.972549, 0.752941, 1)
theme_override_fonts/font = SubResource("SystemFont_frlup")
theme_override_font_sizes/font_size = 64
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel2" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 315.0
offset_top = 192.5
offset_right = 837.0
offset_bottom = 455.5
grow_horizontal = 2
pivot_offset = Vector2(261, 131.5)
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_743kh")

[node name="CenterContainer" type="CenterContainer" parent="Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.5
offset_top = -114.5
offset_right = 182.5
offset_bottom = 93.5
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="Panel2/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
columns = 2

[node name="FinalTimerText" type="Label" parent="Panel2/CenterContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0313726, 0.0313726, 0.12549, 1)
theme_override_fonts/font = SubResource("SystemFont_1sbsr")
text = "Time Survived:"
label_settings = SubResource("LabelSettings_5voe0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalTimer" type="Label" parent="Panel2/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.0313726, 0.0313726, 0.12549, 1)
theme_override_fonts/font = SubResource("SystemFont_1sbsr")
text = "00:00"
label_settings = SubResource("LabelSettings_5voe0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalMonstersText" type="Label" parent="Panel2/CenterContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0313726, 0.0313726, 0.12549, 1)
theme_override_fonts/font = SubResource("SystemFont_1sbsr")
text = "Monsters Defeated:"
label_settings = SubResource("LabelSettings_5voe0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalMonsters" type="Label" parent="Panel2/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.0313726, 0.0313726, 0.12549, 1)
theme_override_fonts/font = SubResource("SystemFont_1sbsr")
text = "0"
label_settings = SubResource("LabelSettings_5voe0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalGoldTexture" type="TextureRect" parent="Panel2/CenterContainer/GridContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_aa3vd")
stretch_mode = 5

[node name="FinalGold" type="Label" parent="Panel2/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.0313726, 0.0313726, 0.12549, 1)
theme_override_fonts/font = SubResource("SystemFont_1sbsr")
text = "0"
label_settings = SubResource("LabelSettings_5voe0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalMeatTexture" type="TextureRect" parent="Panel2/CenterContainer/GridContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_eoedm")
stretch_mode = 3

[node name="FinalMeat" type="Label" parent="Panel2/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.0313726, 0.0313726, 0.12549, 1)
theme_override_fonts/font = SubResource("SystemFont_1sbsr")
text = "0"
label_settings = SubResource("LabelSettings_5voe0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -206.5
offset_top = 510.0
offset_right = 206.5
offset_bottom = 546.0
grow_horizontal = 2
pivot_offset = Vector2(206, 19.97)
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.0313726, 0.0313726, 0.12549, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0.627451, 1)
theme_override_constants/outline_size = 16
theme_override_fonts/font = SubResource("SystemFont_rnsqx")
theme_override_font_sizes/font_size = 32
text = ">> Press any key to restart<<"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pbifq")
}
autoplay = "default"
